# dxread

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pydxread.py  pyproject.toml
.github/workflows/: precommit_checks.yaml
data/: ISCCP.DX.0.GOE-7.1991.01.01.0000.AES  ISCCP.DX.0.GOE-7.1991.01.01.0300.AES  ISCCP.DX.0.GOE-7.1991.01.01.0600.AES  ISCCP.DX.0.GOE-7.1991.01.01.0900.AES  ISCCP.DX.0.GOE-7.1991.01.01.1200.AES  ISCCP.DX.0.GOE-7.1991.01.01.1500.AES  ISCCP.DX.0.GOE-7.1991.01.01.1800.AES  ISCCP.DX.0.GOE-7.1991.01.01.2100.AES  ISCCP.DX.0.MET-7.2002.01.02.1200.EUM  ISCCP.DX.0.NOA-10A.1991.01.01.0000.NOM
data/1985/: getFiles.sh
dxread/: constants.py  reader.py  utils.py
dxread/models/: dxadd1.py  dxadd3.py  dxdata.py  dxheader.py  dxpixel.py  dxpoint.py  dxpointdata.py  dxrecord.py  dxrecord_header.py  dxs1.py  dxs2.py  dxs3.py  dxs4.py
examples/: iradaverage.py  pos2Grid.py  pydxread_ex.py  yearaverage.py
notebooks/: IRadAverage.ipynb
scripts/: checks  format_files
zig-dxread/: README.md  build.zig
zig-dxread/src/: constants.zig  dxread.zig  logger.zig  main.zig  range.zig
zig-dxread/src/models/: dx_add1.zig  dx_add3.zig  dx_data.zig  dx_header.zig  dx_pixel.zig  dx_point.zig  dx_point_data.zig  dx_record.zig  dx_record_header.zig  dx_s1.zig  dx_s2.zig  dx_s3.zig  dx_s4.zig
