[tool.poetry]
name = "dxread"
version = "0.1.0"
description = ""
authors = ["Julien Lhermitte <jrmlhermitte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
black = "^21.11b1"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
