[tool.poetry]
name = "dxread"
version = "0.1.0"
description = ""
authors = ["Julien Lhermitte <jrmlhermitte@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pylint = "^2.11.1"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
jupyter = "^1.0.0"
plotly = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
